--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
